--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -3,7 +3,40 @@
 {% block content %}
 <div class="column is-4 is-offset-4">
     <h3 class="title">Login</h3>
+    ...
+    <div class="navbar-end">
+        <a href="{{ url_for('main.index') }}" class="navbar-item">
+            Home
+        </a>
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('main.profile') }}" class="navbar-item">
+            Profile
+        </a>
+        {% endif %}
+        {% if not current_user.is_authenticated %}
+        <a href="{{ url_for('auth.login') }}" class="navbar-item">
+            Login
+        </a>
+        <a href="{{ url_for('auth.signup') }}" class="navbar-item">
+            Sign Up
+        </a>
+        {% endif %}
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('auth.logout') }}" class="navbar-item">
+            Logout
+        </a>
+        {% endif %}
+    </div>
+
     <div class="box">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <div class="notification is-danger">
+            {{ messages[0] }}
+        </div>
+    {% endif %}
+    {% endwith %}
+    <form method="POST" action="/login">
         <form method="POST" action="/login">
             <div class="field">
                 <div class="control">
@@ -25,5 +58,6 @@
             <button class="button is-block is-info is-large is-fullwidth">Login</button>
         </form>
     </div>
+
 </div>
 {% endblock %}
